--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   ],
   "devDependencies": {
     "enzyme-to-json": "^3.3.5"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
