Setup coverage check collection

--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
+    ],
+    "collectCoverageFrom": [
+      "src/components/**/*.js",
+      "src/utilities/*.js"
     ]
   }
 }
