--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "^2.1.2",
+    "react-timeout": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
